--- a/src/scss/main-theme/parts/base.scss
+++ b/src/scss/main-theme/parts/base.scss
@@ -6393,6 +6393,11 @@ a:hover,
       }
     }
 
+    .alert{
+      padding: 0px 25px;
+      margin-bottom: 10px;
+    }
+
     .bans {
       align-items: center;
       justify-content: center;
@@ -6443,6 +6448,7 @@ a:hover,
       min-height: 8rem;
       background: #fff;
       padding-top: 0.5rem;
+      margin-bottom: 10px;
 
       // .highcharts-grid path {
       //   stroke: #e9e9e9 !important;
@@ -6884,7 +6890,7 @@ a:hover,
 }
 
 .reztable {
-  margin-top: -1rem;
+  //margin-top: -1rem;
 
   td {
     vertical-align: middle;
